--- a/src/sass/_layout.sass
+++ b/src/sass/_layout.sass
@@ -1,5 +1,5 @@
-// #container
-//   @apply w-full min-h-screen flex flex-col px-4
+#container
+  @apply w-full min-h-screen flex flex-col justify-center px-4 bg-blueGray-500
 
 // #header
 //   @apply mb-5
