--- a/src/sass/_base.sass
+++ b/src/sass/_base.sass
@@ -99,7 +99,7 @@ html
 body
   text-rendering: optimizeLegibility
   -webkit-tap-highlight-color: rgba(0,0,0,0)
-  @apply min-h-screen bg-white
+  @apply bg-white
 
 a
   &:link
