--- a/src/sass/pages/index.sass
+++ b/src/sass/pages/index.sass
@@ -12,7 +12,7 @@
   #main
     @apply my-0 mx-auto p-0 min-h-screen w-full max-w-none
 
-#chatSP
+#gallerySP
   .swiper
     @apply flex-1 h-full
     &-slide
@@ -31,4 +31,4 @@
 .portal
   @apply my-4 p-4 rounded-lg bg-gray-100 relative flex flex-col space-y-4 justify-center
   button
-    @apply bg-cyan-500 hover:bg-cyan-400
+    @apply bg-primary-dark hover:bg-primary
