--- a/src/components/chatroom/style.sass
+++ b/src/components/chatroom/style.sass
@@ -1,12 +1,11 @@
 .chatroom
-  @apply hidden flex-col py-15 overflow-hidden w-screen h-screen  fixed w-full h-full z-5 left-0 top-0 bg-white
+  @apply hidden flex-col py-15 overflow-hidden fixed w-full h-full z-5 left-0 top-0 bg-white
   &--connected
     @apply flex
   &--disconnected,
   &--error
-    @apply relative
     &::before
-      @apply sticky z-1 left-0 top-0 w-full text-center p-2 animate-appear
+      @apply sticky z-5 left-0 top-0 w-full text-center p-2 animate-appear
   &--disconnected
     &::before
       @apply bg-gray-900 text-white
@@ -14,7 +13,7 @@
   &--error
     &::before
       @apply bg-red-900 text-white
-      content: '連線失敗'
+      content: '連線發生錯誤'
   &-body
     @apply flex-1 space-y-6 overflow-auto p-4 overscroll-contain
   &-dialog
